Add automatic and manual meal-type classification for sugar readings

--- a/apps/app-004-sugar-tracker/index.html
+++ b/apps/app-004-sugar-tracker/index.html
@@ -33,6 +33,16 @@
               Level (mmol/L)
               <input type="number" name="level" min="2" max="20" step="0.1" required placeholder="e.g. 5.8" />
             </label>
+            <label>
+              Reading type
+              <select name="mealType">
+                <option value="auto">Auto (by time)</option>
+                <option value="fasting">Fasting</option>
+                <option value="breakfast">Breakfast</option>
+                <option value="lunch">Lunch</option>
+                <option value="dinner">Dinner</option>
+              </select>
+            </label>
           </div>
           <button type="submit">Save reading</button>
         </form>
