Add install prompt and app icon/favicon support

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>App 100</title>
+    <link rel="icon" type="image/svg+xml" href="apps/app-100-icon.svg" />
+    <link rel="apple-touch-icon" href="apps/app-100-icon.svg" />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -30,6 +32,15 @@
           </label>
         </div>
       </header>
+
+      <section class="install-tip" aria-label="Install tip">
+        <h2>Pin App 100 to your home screen</h2>
+        <p>
+          Save this app to your device home screen for fast daily access. Use your browser menu and
+          choose <strong>Add to Home Screen</strong> (or install), then keep the App 100 icon as
+          your shortcut and favicon.
+        </p>
+      </section>
 
       <nav class="nav">
         <a href="#/launcher" data-route-link="launcher">Launcher</a>
