Add glucose target ranges section to sugar tracker

--- a/apps/app-004-sugar-tracker/index.html
+++ b/apps/app-004-sugar-tracker/index.html
@@ -18,6 +18,18 @@
       </header>
 
       <section class="card">
+        <h2>Ranges</h2>
+        <p class="range-line">
+          Aim for sugar levels fasting/30 minutes before meals:
+          <strong>3.5-5.5</strong>
+        </p>
+        <p class="range-line">
+          Aim for sugar levels 2 hours after meals:
+          <strong>3.5 to 7.0</strong>
+        </p>
+      </section>
+
+      <section class="card">
         <h2>Add glucose reading</h2>
         <form id="entry-form" class="form-grid">
           <div class="grid-two">
