Simplify sugar tracker to normal mode capture flow

--- a/apps/app-004-sugar-tracker/index.html
+++ b/apps/app-004-sugar-tracker/index.html
@@ -11,10 +11,7 @@
       <header class="hero card">
         <p class="eyebrow">App #4</p>
         <h1>Sugar Daily Tracker</h1>
-        <p class="muted">
-          Track glucose with profile-aware standards, comorbidity context, and lifestyle factors. Data
-          stays in local storage.
-        </p>
+        <p class="muted">Simple capture flow: sugar level + meal timing + save. Data stays in local storage.</p>
       </header>
 
       <nav class="card tab-nav" aria-label="Sugar tracker sections">
@@ -24,39 +21,6 @@
       </nav>
 
       <section class="tab-panel active" data-tab-panel="capture">
-        <section class="card">
-          <div class="section-header">
-            <h2>Monitoring mode</h2>
-            <button id="toggle-mode" type="button" class="ghost">Switch to pregnant mode</button>
-          </div>
-          <p class="muted" id="mode-caption">Using non-pregnant glucose standards.</p>
-          <form id="profile-form" class="form-grid">
-            <div class="grid-two">
-              <label>
-                Pregnancy week
-                <input id="pregnancy-week" type="number" min="4" max="42" step="1" placeholder="Required in pregnant mode" />
-              </label>
-              <label>
-                Hyperthyroidism
-                <select name="hyperthyroidism" required>
-                  <option value="">Select</option>
-                  <option value="yes">Yes</option>
-                  <option value="no">No</option>
-                </select>
-              </label>
-              <label>
-                Insulin resistance
-                <select name="insulinResistance" required>
-                  <option value="">Select</option>
-                  <option value="yes">Yes</option>
-                  <option value="no">No</option>
-                </select>
-              </label>
-            </div>
-            <button type="submit">Save profile</button>
-          </form>
-        </section>
-
         <section class="card">
           <h2>Add glucose reading</h2>
           <form id="entry-form" class="form-grid">
@@ -70,51 +34,21 @@
                 <input type="time" name="time" required />
               </label>
               <label>
-                Level (mmol/L)
+                Sugar level (mmol/L)
                 <input type="number" name="level" min="2" max="20" step="0.1" required placeholder="e.g. 5.8" />
               </label>
               <label>
                 Reading type
-                <select name="mealType">
-                  <option value="auto">Auto (by time)</option>
+                <select name="mealType" required>
+                  <option value="">Select</option>
                   <option value="fasting">Fasting</option>
                   <option value="breakfast">Breakfast</option>
                   <option value="lunch">Lunch</option>
                   <option value="dinner">Dinner</option>
                 </select>
               </label>
-              <label>
-                Carbohydrates around reading (g)
-                <input type="number" name="carbsGrams" min="0" max="250" step="1" required placeholder="e.g. 35" />
-              </label>
-              <label>
-                Activity in prior 2h (minutes)
-                <input type="number" name="activityMinutes" min="0" max="240" step="1" required placeholder="e.g. 20" />
-              </label>
-              <label>
-                Thyroid symptom intensity
-                <select name="thyroidSymptoms" required>
-                  <option value="">Select</option>
-                  <option value="none">None</option>
-                  <option value="mild">Mild</option>
-                  <option value="moderate">Moderate</option>
-                  <option value="severe">Severe</option>
-                </select>
-              </label>
-              <label>
-                Sleep last night (hours)
-                <input type="number" name="sleepHours" min="0" max="16" step="0.5" required placeholder="e.g. 7.5" />
-              </label>
-              <label>
-                Stress level (0-10)
-                <input type="number" name="stressLevel" min="0" max="10" step="1" required placeholder="e.g. 4" />
-              </label>
-              <label>
-                Resting heart rate (bpm)
-                <input type="number" name="heartRate" min="35" max="180" step="1" required placeholder="e.g. 78" />
-              </label>
             </div>
-            <button type="submit">Save reading</button>
+            <button type="submit">Capture</button>
           </form>
         </section>
       </section>
@@ -154,8 +88,7 @@
         <section class="card">
           <h2>Reference levels guide</h2>
           <p class="muted">
-            These ranges are display guides for this tracker logic and not a diagnosis. Confirm your
-            personal targets with your clinician.
+            Display guide only. Confirm your personal targets with your clinician.
           </p>
           <div id="reference-guide" class="reference-guide"></div>
         </section>
