Add manual meal override and capture fallback button

--- a/apps/app-004-sugar-tracker/index.html
+++ b/apps/app-004-sugar-tracker/index.html
@@ -35,12 +35,20 @@
               </label>
               <label>
                 Sugar level (mmol/L)
-                <input type="number" name="level" min="2" max="20" step="0.1" required placeholder="e.g. 5.8" />
+                <input
+                  type="text"
+                  name="level"
+                  required
+                  placeholder="e.g. 5.8"
+                  inputmode="decimal"
+                  autocomplete="off"
+                  maxlength="3"
+                />
               </label>
               <label>
-                Reading type
-                <select name="mealType" required>
-                  <option value="">Select</option>
+                Reading type (optional override)
+                <select name="mealType">
+                  <option value="">Auto-detect from time</option>
                   <option value="fasting">Fasting</option>
                   <option value="breakfast">Breakfast</option>
                   <option value="lunch">Lunch</option>
@@ -48,8 +56,10 @@
                 </select>
               </label>
             </div>
+            <p class="muted">Reading type is auto-detected from time unless you override it. The value auto-captures 2 seconds after you type it.</p>
             <button type="submit">Capture</button>
           </form>
+          <p id="capture-toast" class="toast" role="status" aria-live="polite"></p>
         </section>
       </section>
 
